--- a/index.html
+++ b/index.html
@@ -2,11 +2,17 @@
 <html>
     <header>
         <link rel="stylesheet" href="style.css">
-        <script src="script.js"></script>
+        <script src="script.js" defer></script>
         <meta charset="utf-8">
         <title>Rock Paper Scissors Game</title>
     </header>
     <body>
-        
+        <button id="paper-btn">Paper</button>
+        <button id="rock-btn">Rock</button>
+        <button id="scissors-btn">Scissors</button>
+
+        <div class="result-display">
+
+        </div>
     </body>
 </html>
