--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
         <title>Rock Paper Scissors Game</title>
     </header>
     <body>
-        <button id="paper-btn">Paper</button>
-        <button id="rock-btn">Rock</button>
-        <button id="scissors-btn">Scissors</button>
+        <button class="button" id="paper-btn">paper</button>
+        <button class="button" id="rock-btn">rock</button>
+        <button class="button" id="scissors-btn">scissors</button>
 
         <div class="result-display">
 
