--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <button class="button" id="rock-btn">rock</button>
         <button class="button" id="scissors-btn">scissors</button>
 
-        <div class="result-display">
+        <div class="container">
 
         </div>
     </body>
